@@ -13,6 +13,8 @@ import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class TransactionService {
@@ -26,6 +28,7 @@ public class TransactionService {
         this.accountRepository = accountRepository;
     }
 
+    // 🔹 DEBIT / CREDIT
     public TransactionResponseDTO performTransaction(TransactionRequestDTO dto) {
 
         Account account = accountRepository.findByAccountNumber(dto.getAccountNumber())
@@ -49,6 +52,7 @@ public class TransactionService {
         transaction.setAmount(dto.getAmount());
         transaction.setBalanceAfterTransaction(updatedBalance);
         transaction.setTransactionDate(LocalDateTime.now());
+        transaction.setTransactionRef(generateTransactionRef());
 
         transactionRepository.save(transaction);
         accountRepository.save(account);
@@ -56,6 +60,7 @@ public class TransactionService {
         return mapToDTO(transaction);
     }
 
+    // 🔹 ALL TRANSACTIONS
     public List<TransactionResponseDTO> getAllTransactions(String accountNumber) {
         Account account = accountRepository.findByAccountNumber(accountNumber)
                 .orElseThrow(() -> new ResourceNotFoundException("Account not found"));
@@ -63,9 +68,10 @@ public class TransactionService {
         return transactionRepository.findByAccount(account)
                 .stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // 🔹 STATEMENT BETWEEN DATES
     public List<TransactionResponseDTO> getStatementBetweenDates(
             String accountNumber,
             LocalDateTime from,
@@ -78,16 +84,27 @@ public class TransactionService {
                 .findByAccountAndTransactionDateBetween(account, from, to)
                 .stream()
                 .map(this::mapToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // 🔁 ENTITY → DTO
     private TransactionResponseDTO mapToDTO(Transaction t) {
         TransactionResponseDTO dto = new TransactionResponseDTO();
         dto.setTransactionId(t.getTransactionId());
+        dto.setTransactionRef(t.getTransactionRef());
         dto.setTransactionType(t.getTransactionType());
         dto.setAmount(t.getAmount());
         dto.setBalanceAfterTransaction(t.getBalanceAfterTransaction());
         dto.setTransactionDate(t.getTransactionDate());
         return dto;
+    }
+
+    // 🔐 Transaction reference generator
+    private String generateTransactionRef() {
+        return "TXN-" + UUID.randomUUID()
+                .toString()
+                .replace("-", "")
+                .substring(0, 12)
+                .toUpperCase();
     }
 }
